--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 
 # Mod Properties
 version = 1.0.0
-maven_group = com.disarray
-archives_base_name = unded-exporter
+maven_group = com.jumble
+archives_base_name = charon
 
 # Dependencies are managed at gradle/libs.versions.toml
